# incremento_bt

./: .gitignore  README.md  pyproject.toml
etl/: main.py
etl/extract/: extract_database.py  extract_excel.py
etl/load/: load_incremento.py  run_sql_file.py
etl/shared/: classificacao.py
etl/transform/: merge_reports.py  transform_incremento.py
sql/: create_indexes_increment_at.sql  create_indexes_increment_bt.sql
tests/: __init__.py  test_extract_excel.py  test_load_incremento.py  test_transform_incremento.py
